[add]: full swagger docs added
