# internal/transport/httpHandlers/models.go
@@ -1,6 +1,6 @@
 package httpHandlers
 
-type processingResponse struct {
+type ProcessingResponse struct {
 	Name     string `json:"song_name"`
 	Duration string `json:"song_duration"`
 	Status   string `json:"playback_status"`
